# python-laba2

./: README.md  pyproject.toml
src/: __init__.py  command_cat.py  command_cd.py  command_cp.py  command_ls.py  command_mv.py  command_rm.py  log_setup.py  main.py  mini_shell.py
tests/: cat_test.py  cd_test.py  cp_test.py  ls_test.py  mv_test.py  rm_test.py  test_commands.py  test_log_setup.py
