[project]
name = "mini-shell"
version = "1.0.0"
description = "A mini shell with file commands implementation"
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]